--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-tools#readme",
   "dependencies": {
     "commander": "^2.9.0",
-    "fs-extra": "^0.28.0"
+    "connect": "^3.4.1",
+    "fs-extra": "^0.28.0",
+    "serve-static": "^1.10.2"
   }
 }
