--- a/package.json
+++ b/package.json
@@ -24,6 +24,17 @@
     "commander": "^2.9.0",
     "connect": "^3.4.1",
     "fs-extra": "^0.28.0",
+    "gulp-4.0.build": "^4.0.0-build.a271520",
+    "gulp-concat": "^2.6.0",
+    "gulp-footer": "^1.0.5",
+    "gulp-header": "^1.7.1",
+    "gulp-less": "^3.0.5",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.0",
+    "install": "^0.6.1",
+    "merge2": "^1.0.2",
+    "npm": "^3.8.7",
+    "q": "^1.4.1",
     "serve-static": "^1.10.2"
   }
 }
