Adding auto guid generation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^2.9.0",
     "connect": "^3.4.1",
     "fs-extra": "^0.28.0",
+    "guid": "0.0.12",
     "gulp-4.0.build": "^4.0.0-build.a271520",
     "gulp-concat": "^2.6.0",
     "gulp-footer": "^1.0.5",
@@ -32,6 +33,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.0",
     "install": "^0.6.1",
+    "jsonfile": "^2.3.0",
     "merge2": "^1.0.2",
     "npm": "^3.8.7",
     "q": "^1.4.1",
