--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-header": "^1.7.1",
     "gulp-less": "^3.0.5",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-template": "^4.0.0",
     "gulp-typescript": "^2.13.0",
     "install": "^0.6.1",
     "jsonfile": "^2.3.0",
