--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "commander": "^2.9.0",
     "connect": "^3.4.1",
     "fs-extra": "^0.28.0",
-    "guid": "0.0.12",
     "gulp-4.0.build": "^4.0.0-build.a271520",
     "gulp-concat": "^2.6.0",
     "gulp-footer": "^1.0.5",
@@ -36,6 +35,7 @@
     "install": "^0.6.1",
     "jsonfile": "^2.3.0",
     "merge2": "^1.0.2",
+    "node-uuid": "^1.4.7",
     "npm": "^3.8.7",
     "q": "^1.4.1",
     "serve-static": "^1.10.2"
