--- a/templates/pbiviz.json.template
+++ b/templates/pbiviz.json.template
@@ -14,6 +14,8 @@
         "name": "",
         "email": ""
     },
-    "assets": { },
+    "assets": {
+        "icon": assets/icon.png"
+    },
     "style": "style/visual.less"
 }
