Add icon and package template

--- a/config.json
+++ b/config.json
@@ -2,7 +2,9 @@
     "templates": {
         "visual": "templates/visual",
         "pbiviz": "templates/pbiviz.json.template",
-        "plugin": "templates/plugin.ts.template"
+        "plugin": "templates/plugin.ts.template",
+        "package": "templates/package.json.template",
+        "iconCss": "templates/icon.css.template"
     },
     "build": {
         "precompileFolder": ".tmp/precompile",
