--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concat-with-sourcemaps": "^1.0.4",
     "connect": "^3.4.1",
     "fs-extra": "^0.28.0",
+    "jszip": "^3.0.0",
     "less": "^2.6.1",
     "lodash": "^4.11.1",
     "node-uuid": "^1.4.7",
