missing quote in pbiviz.json.template

--- a/templates/pbiviz.json.template
+++ b/templates/pbiviz.json.template
@@ -15,7 +15,7 @@
         "email": ""
     },
     "assets": {
-        "icon": assets/icon.png"
+        "icon": "assets/icon.png"
     },
     "style": "style/visual.less"
 }
