--- a/templates/pbiviz.json.template
+++ b/templates/pbiviz.json.template
@@ -17,5 +17,6 @@
     "assets": {
         "icon": "assets/icon.png"
     },
-    "style": "style/visual.less"
+    "style": "style/visual.less",
+    "capabilities": "capabilities.json"
 }
