--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "concat-with-sourcemaps": "^1.0.4",
     "connect": "^3.4.1",
     "fs-extra": "^0.28.0",
     "jszip": "^3.0.0",
@@ -31,6 +30,7 @@
     "lodash": "^4.11.1",
     "node-uuid": "^1.4.7",
     "serve-static": "^1.10.2",
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "uglify-js": "^2.6.2"
   }
 }
