--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/VisualPackage.js",
   "scripts": {
     "start": "node ./bin/pbiviz.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "bin": {
     "pbiviz": "./bin/pbiviz.js"
@@ -32,5 +32,9 @@
     "serve-static": "^1.10.2",
     "typescript": "^1.8.10",
     "uglify-js": "^2.6.2"
+  },
+  "devDependencies": {
+    "jasmine": "^2.4.1",
+    "wrench": "^1.5.9"
   }
 }
