--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.11.1",
     "node-uuid": "^1.4.7",
     "serve-static": "^1.10.2",
+    "source-map-concat": "^1.0.1",
     "typescript": "^1.8.10",
     "uglify-js": "^2.6.2"
   },
