--- a/templates/pbiviz.json.template
+++ b/templates/pbiviz.json.template
@@ -17,6 +17,7 @@
     "assets": {
         "icon": "assets/icon.png"
     },
+    "externalJS": [],
     "style": "style/visual.less",
     "capabilities": "capabilities.json"
 }
