--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commander": "^2.9.0",
     "connect": "^3.4.1",
     "fs-extra": "^0.28.0",
+    "jsonschema": "^1.1.0",
     "jszip": "^3.0.0",
     "less": "^2.6.1",
     "lodash": "^4.11.1",
