--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "uglify-js": "^2.6.2"
   },
   "devDependencies": {
+    "async": "^2.0.1",
     "jasmine": "^2.4.1",
     "wrench": "^1.5.9"
   }
