--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,17 +39,18 @@ cache:
 
 # scripts that run after cloning repository
 install:
+  # Get the latest stable version of Node.js or io.js
+  - ps: Install-Product node $env:nodejs_version
+  # install modules
   - npm install
 
-#---------------------------------#
-#       tests configuration       #
-#---------------------------------#
-
+# Post-install test scripts.
 test_script:
+  # Output useful info for debugging.
   - node --version
   - npm --version
+  # run tests
   - npm test
-  
 
 # Don't actually build.
 build: off
