--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,19 +25,11 @@
 # appveyor CI configuration file
 # http://www.appveyor.com/docs/appveyor-yml
 
-os: Windows Server 2012
-
+# Test against this version of Node.js
 environment:
-  nodejs_version: "4.4.5"
+  nodejs_version: "5.11.1"
 
-# build platform, i.e. x86, x64, Any CPU. This setting is optional.
-platform: Any CPU
-
-# build cache to preserve files/folders between builds
-cache:
-  #- node_modules # local npm modules
-
-# scripts that run after cloning repository
+# Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
@@ -51,6 +43,4 @@ test_script:
   - npm --version
   # run tests
   - npm test
-
-# Don't actually build.
-build: off
+  
