--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,14 +25,11 @@
 # appveyor CI configuration file
 # http://www.appveyor.com/docs/appveyor-yml
 
-# Test against this version of Node.js
-environment:
-  nodejs_version: "5.11.1"
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
-  - ps: Install-Product node $env:nodejs_version x64
+  - ps: Install-Product node 5
   # install modules
   - npm install
 
@@ -44,3 +41,5 @@ test_script:
   # run tests
   - npm test
   
+# Don't actually build.
+build: off
