--- a/templates/visuals/rvisual/tsconfig.json
+++ b/templates/visuals/rvisual/tsconfig.json
@@ -4,6 +4,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "target": "ES5",
+        "noLib": false,
         "sourceMap": true,
         "out": "./.tmp/build/visual.js"
     },
