Add api v1.2.0 (alpha), Fix objects in 1.0/1.1, add update command for updating api

--- a/config.json
+++ b/config.json
@@ -1,9 +1,12 @@
 {
     "templates": {
-        "visual": "templates/visual",
+        "visuals": "templates/visuals",
         "pbiviz": "templates/pbiviz.json.template",
         "plugin": "templates/plugin.ts.template",
         "package": "templates/package.json.template"
+    },
+    "generate": {
+        "apiVersion": "1.1.0"
     },
     "build": {
         "precompileFolder": ".tmp/precompile",
