--- a/templates/plugin.ts.template
+++ b/templates/plugin.ts.template
@@ -5,7 +5,7 @@ module powerbi.visuals.plugins {
         class: '<%= visualClass %>',
         version: '<%= visualVersion %>',
         apiVersion: '<%= apiVersion %>',
-        create: (options) => new powerbi.extensibility.visual.<%= visualGuid %>.<%= visualClass %>(options),
+        create: (options: extensibility.visual.VisualConstructorOptions) => new powerbi.extensibility.visual.<%= visualGuid %>.<%= visualClass %>(options),
         custom: true
     };
 }
