Added package dependencies For the custom R visuals, the R script will most probably require some CRAN packages to be installed on the local machine of the user. So we are defining a way for a custom R visual author to declare  what are the CRAN packages his script reuires so we will be able to verify and install those packages for the user (after getting user concent)

--- a/templates/pbiviz.json.template
+++ b/templates/pbiviz.json.template
@@ -19,5 +19,6 @@
     },
     "externalJS": [],
     "style": "style/visual.less",
-    "capabilities": "capabilities.json"
+    "capabilities": "capabilities.json",
+    "dependencies": "dependencies.json"
 }
