Finalize rvisual template (#30)
* Finalize rvisual template

Added several code snippets that users will be able to use to add
support for properties much easier

* Rolled back capabilities.json fix

* Changed default capabilities for rvisual template
In the data view mapping we now generate a select property containing a for property which will allow users to just duplicate the for property when they add a new role

* Fixed some typos and added an example for the capabilities object definition

--- a/templates/visuals/rvisual/tsconfig.json
+++ b/templates/visuals/rvisual/tsconfig.json
@@ -9,6 +9,7 @@
     },
     "files": [
         ".api/v1.2.0/PowerBI-visuals.d.ts",
+        "src/objectEnumerationUtility.ts",
         "src/visual.ts"
     ]
 }
