--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "node-uuid": "^1.4.7",
     "serve-static": "^1.10.2",
     "source-map-concat": "^1.0.1",
-    "typescript": "^1.8.10",
+    "typescript": "2.1.5",
     "uglify-js": "^2.6.2",
     "gulp-powerbi-package-validator": "^1.0.0"
   },
