Fixed the table template to get d3 as a NPM package

--- a/templates/visuals/table/tsconfig.json
+++ b/templates/visuals/table/tsconfig.json
@@ -10,6 +10,7 @@
     "files": [
         ".api/v1.2.0/PowerBI-visuals.d.ts",
         "./typings/index.d.ts",
+        "node_modules/d3/d3.js",
         "src/visualViewModel.ts",
         "src/visualTransform.ts",
         "src/visual.ts"
