--- a/templates/visuals/table/package.json
+++ b/templates/visuals/table/package.json
@@ -1,3 +1,11 @@
 {
-  "name": "visual"
+  "name": "visual",
+  "scripts":{
+    "postinstall":"npm run typings",
+    "typings":"node node_modules/typings/dist/bin.js i"
+  },
+  "devDependencies": {
+    "typings": "^1.3.2",
+    "d3": "3.5.5"
+  }
 }
