--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "jszip": "^3.0.0",
     "less": "^2.6.1",
     "lodash": "^4.11.1",
-    "node-uuid": "^1.4.7",
     "serve-static": "^1.10.2",
     "source-map-concat": "^1.0.1",
     "typescript": "^1.8.10",
     "uglify-js": "^2.6.2",
+    "uuid": "^3.0.0",
     "gulp-powerbi-package-validator": "^1.0.0"
   },
   "devDependencies": {
