--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "serve-static": "^1.10.2",
     "source-map-concat": "^1.0.1",
     "typescript": "^1.8.10",
-    "uglify-js": "^2.6.2"
+    "uglify-js": "^2.6.2",
+    "gulp-powerbi-package-validator": "^1.0.0"
   },
   "devDependencies": {
     "async": "^2.0.1",
