--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -1,5 +1,5 @@
 {
-    "version": "1.0.0",
+    "version": <%= JSON.stringify(visualData.version) %>,
     "author": <%= JSON.stringify(authorData) %>,
     "resources": [
         {
