#14696 Generate the settings object automatically based on the capabi… (#87)
* #14696 Generate the settings object automatically based on the capabilities file
#14658 Improve new visual template in pbiviz tool

* Test object.keys to reduce some code

* Some fixes according to PR comments

* Add unit test for generated settings.ts file check

* Add tests for visual settings

* Add test for settings, fix default template

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "typescript": "2.1.5",
     "uglify-js": "^2.6.2",
     "uuid": "^3.0.0",
-    "gulp-powerbi-package-validator": "^1.0.0"
+    "gulp-powerbi-package-validator": "^1.0.0",
+    "powerbi-visuals-utils-dataviewutils": "1.0.1"
   },
   "devDependencies": {
     "async": "^2.0.1",
