--- a/templates/pbiviz.json.template
+++ b/templates/pbiviz.json.template
@@ -17,7 +17,9 @@
     "assets": {
         "icon": "assets/icon.png"
     },
-    "externalJS": [],
+    "externalJS": [
+        "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.js"
+    ],
     "style": "style/visual.less",
     "capabilities": "capabilities.json",
     "dependencies": "dependencies.json",
