--- a/templates/visuals/slicer/tsconfig.json
+++ b/templates/visuals/slicer/tsconfig.json
@@ -9,6 +9,8 @@
     },
     "files": [
         ".api/v1.5.0/PowerBI-visuals.d.ts",
+        "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
+        "src/settings.ts",
         "src/visual.ts"
     ]
 }
