--- a/templates/visuals/table/package.json
+++ b/templates/visuals/table/package.json
@@ -1,12 +1,9 @@
 {
   "name": "visual",
-  "scripts":{
-    "postinstall":"npm run typings",
-    "typings":"node node_modules/typings/dist/bin.js i"
-  },
   "devDependencies": {
-    "typings": "^1.3.2",
+    "@types/d3": "3.5.36",
     "d3": "3.5.5",
-    "powerbi-visuals-utils-dataviewutils": "1.0.1"
+    "powerbi-visuals-utils-dataviewutils": "1.2.0",
+    "typescript": "2.2.1"
   }
 }
