--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jscs": "^3.0.7",
     "jshint": "^2.9.2",
     "request": "^2.74.0",
-    "ps-tree": "^1.1.0",
+    "tree-kill": "^1.1.0",
     "wrench": "^1.5.9"
   }
 }
