--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "1.7.2",
+  "version": "1.7.3",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -25,30 +25,35 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-tools#readme",
   "dependencies": {
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "connect": "^3.4.1",
-    "fs-extra": "^0.28.0",
-    "jsonschema": "^1.1.0",
-    "jszip": "^3.0.0",
-    "less": "^2.6.1",
-    "lodash": "^4.11.1",
+    "chalk": "1.1.3",
+    "commander": "2.9.0",
+    "connect": "3.4.1",
+    "fs-extra": "0.28.0",
+    "jsonschema": "1.1.0",
+    "jszip": "3.0.0",
+    "less": "2.6.1",
+    "lodash": "4.11.1",
     "powerbi-visuals-package-validator": "^1.0.0",
     "powerbi-visuals-utils-dataviewutils": "1.2.0",
-    "serve-static": "^1.10.2",
-    "source-map-concat": "^1.0.1",
+    "serve-static": "1.10.2",
+    "source-map-concat": "1.0.1",
     "typescript": "2.1.5",
-    "uglify-js": "^2.6.2",
-    "uuid": "^3.0.0"
+    "uglify-js": "2.6.2",
+    "uuid": "3.0.0"
   },
   "devDependencies": {
-    "async": "^2.0.1",
-    "jasmine": "^2.4.1",
-    "jasmine-spec-reporter": "^2.5.0",
-    "jscs": "^3.0.7",
-    "jshint": "^2.9.2",
-    "request": "^2.74.0",
+    "async": "2.0.1",
+    "jasmine": "2.4.1",
+    "jasmine-node": "1.14.5",
+    "jasmine-spec-reporter": "2.5.0",
+    "jscs": "3.0.7",
+    "jshint": "2.9.2",
+    "ps-tree": "1.1.0",
+    "request": "2.74.0",
     "tree-kill": "^1.1.0",
-    "wrench": "^1.5.9"
+    "wrench": "1.5.9"
+  },
+  "engines": {
+    "node": "^6.0.0"
   }
 }
