--- a/templates/visuals/table/tsconfig.json
+++ b/templates/visuals/table/tsconfig.json
@@ -9,7 +9,7 @@
     },
     "files": [
         ".api/v1.5.0/PowerBI-visuals.d.ts",
-        "node_modules/d3/d3.js",
+        "node_modules/@types/d3/index.d.ts",
         "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
         "src/visualViewModel.ts",
         "src/visualTransform.ts",
