--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "1.8.1",
+  "version": "1.9.0",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
     "start": "node ./bin/pbiviz.js",
     "test": "npm run clean-tests && npm run jscs && npm run jshint && npm run jasmine",
     "jasmine": "node spec/jasmine-runner.js",
+    "jasmine-inspect": "node --inspect spec/jasmine-runner.js",
     "jscs": "jscs bin lib spec",
     "jshint": "jshint bin lib spec",
-    "clean-tests": "node spec/clean-tests.js"
+    "clean-tests": "node spec/clean-tests.js",
+    "debug-tests": "npm run clean-tests && npm run jscs && npm run jshint && npm run jasmine-inspect"
   },
   "bin": {
     "pbiviz": "./bin/pbiviz.js"
