Generate new certificate (#162)
* Generate new certificate

* Generate cert for win7 by using OpenSSL

* Update changelog and added link to documentation

* Code review

--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
         "assetsRoute": "/assets",
         "privateKey":"certs/PowerBICustomVisualTest_private.key",
         "certificate":"certs/PowerBICustomVisualTest_public.crt",
+        "pfx":"certs/PowerBICustomVisualTest_public.pfx",
         "port":"8080"
     }
 }
