--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,13 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "cwd": "${workspaceRoot}\\spec\\.tmp\\visualname",
-            "program": "${workspaceRoot}\\bin\\pbiviz-package.js"
+            "cwd": "${workspaceRoot}",
+            "program": "${workspaceFolder}\\bin\\pbiviz-new.js",
+            "args": [
+                "-t",
+                "circlecard",
+                "mynewsample"
+            ]
         }
     ]
 }
