--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "2.6.0",
+  "version": "3.1.0",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -26,32 +26,56 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-tools#readme",
   "dependencies": {
-    "chalk": "1.1.3",
-    "commander": "2.9.0",
-    "connect": "^3.6.6",
-    "fs-extra": "0.28.0",
-    "jsonschema": "1.1.0",
-    "jszip": "3.0.0",
-    "less": "^3.8.1",
-    "lodash": "^4.17.11",
-    "powerbi-visuals-utils-dataviewutils": "1.2.0",
-    "serve-static": "^1.13.2",
+    "@babel/core": "7.4.5",
+    "@babel/polyfill": "7.4.4",
+    "@babel/preset-env": "7.4.5",
+    "@babel/runtime": "7.4.5",
+    "@babel/runtime-corejs2": "7.4.5",
+    "core-js": "^2.6.8",
+    "async": "2.6.1",
+    "babel-loader": "8.0.6",
+    "chalk": "2.4.2",
+    "commander": "2.16.0",
+    "connect": "3.6.6",
+    "css-loader": "2.1.1",
+    "expose-loader": "0.7.5",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "friendly-errors-webpack-plugin": "1.7.0",
+    "fs-extra": "8.0.1",
+    "json-loader": "0.5.7",
+    "jsonschema": "1.2.4",
+    "jszip": "3.2.1",
+    "less": "3.9.0",
+    "less-loader": "5.0.0",
+    "lodash": "4.17.11",
+    "mini-css-extract-plugin": "0.6.0",
+    "multi-loader": "0.1.0",
+    "powerbi-visuals-webpack-plugin": "2.1.2",
+    "request": "2.88.0",
+    "script-loader": "0.7.2",
+    "serve-static": "1.14.1",
     "source-map-concat": "1.0.1",
-    "typescript": "2.3.3",
-    "uglify-js": "2.6.2",
-    "uuid": "3.0.0"
+    "style-loader": "0.23.1",
+    "ts-loader": "6.0.1",
+    "tsc-watch": "2.2.1",
+    "typescript": "3.0.1",
+    "uglify-js": "3.4.6",
+    "uglifyjs-webpack-plugin": "1.2.7",
+    "uuid": "3.3.2",
+    "webpack": "4.32.2",
+    "webpack-bundle-analyzer": "3.3.2",
+    "webpack-dev-server": "3.4.1",
+    "webpack-visualizer-plugin": "0.1.11"
   },
   "devDependencies": {
-    "async": "2.0.1",
-    "eslint": "5.6.1",
+    "eslint": "5.16.0",
+    "har-validator": "5.1.3",
     "jasmine": "2.8.0",
     "jasmine-spec-reporter": "2.5.0",
-    "ps-tree": "1.2.0",
-    "request": "2.83.0",
-    "tree-kill": "^1.1.0",
-    "wrench": "1.5.9"
+    "semver": "^5.6.0",
+    "tree-kill": "1.2.0"
   },
   "engines": {
-    "node": "^6.0.0"
+    "node": "^10.0.0"
   }
 }
