--- a/templates/visuals/rhtml/package.json
+++ b/templates/visuals/rhtml/package.json
@@ -1,6 +1,7 @@
 {
   "name": "visual",
   "devDependencies": {
-    "powerbi-visuals-utils-dataviewutils": "1.2.0"
+    "powerbi-visuals-utils-dataviewutils": "^2.2.0",
+    "powerbi-visuals-api": "~2.6.0"
   }
 }
