--- a/templates/visuals/rhtml/tsconfig.json
+++ b/templates/visuals/rhtml/tsconfig.json
@@ -1,17 +1,19 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "ES5",
-    "sourceMap": true,
-    "out": "./.tmp/build/visual.js"
+      "allowJs": false,
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "target": "es6",
+      "sourceMap": true,
+      "outDir": "./.tmp/build/",
+      "moduleResolution": "node",
+      "declaration": true,
+      "lib": [
+          "es2015",
+          "dom"
+      ]
   },
   "files": [
-    ".api/v2.6.0/PowerBI-visuals.d.ts",
-    "src/htmlInjectionUtility.ts",
-    "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
-    "src/settings.ts",
-    "src/visual.ts"
+      "./src/visual.ts"
   ]
 }
