--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-tools#readme",
   "dependencies": {
     "@babel/core": "7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/runtime": "7.4.5",
@@ -37,7 +38,7 @@
     "chalk": "2.4.2",
     "commander": "2.16.0",
     "connect": "3.6.6",
-    "core-js": "^2.6.8",
+    "core-js": "3.1.3",
     "css-loader": "2.1.1",
     "expose-loader": "0.7.5",
     "extra-watch-webpack-plugin": "1.0.3",
