--- a/templates/visuals/default/package.json
+++ b/templates/visuals/default/package.json
@@ -7,14 +7,13 @@
     "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\""
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
     "@babel/runtime": "^7.4.5",
     "@babel/runtime-corejs2": "^7.4.5",
     "@types/d3": "5.5.0",
     "d3": "5.5.0",
     "powerbi-visuals-utils-dataviewutils": "^2.2.0",
     "powerbi-visuals-api": "~2.6.0",
-    "core-js": "^2.6.8"
+    "core-js": "3.1.3"
   },
   "devDependencies": {
     "ts-loader": "5.2.2",
