--- a/templates/visuals/table/package.json
+++ b/templates/visuals/table/package.json
@@ -14,7 +14,7 @@
     "d3": "5.5.0",
     "powerbi-visuals-utils-dataviewutils": "^2.2.0",
     "powerbi-visuals-api": "~2.6.0",
-    "core-js": "^2.6.8"
+    "core-js": "3.1.3"
   },
   "devDependencies": {
     "ts-loader": "5.2.2",
