--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -28,7 +28,6 @@
   "dependencies": {
     "@babel/core": "7.4.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/polyfill": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/runtime": "7.4.5",
     "@babel/runtime-corejs2": "7.4.5",
@@ -66,10 +65,10 @@
     "uuid": "3.3.2",
     "webpack": "4.32.2",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-dev-server": "3.4.1",
-    "webpack-visualizer-plugin": "0.1.11"
+    "webpack-dev-server": "3.4.1"
   },
   "devDependencies": {
+    "acorn": "^6.1.1",
     "eslint": "5.16.0",
     "har-validator": "5.1.3",
     "jasmine": "2.8.0",
