--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -26,55 +26,60 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-tools#readme",
   "dependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "7.4.5",
-    "@babel/runtime": "7.4.5",
-    "@babel/runtime-corejs2": "7.4.5",
-    "async": "2.6.1",
+    "@babel/core": "7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/preset-env": "7.5.5",
+    "@babel/runtime": "7.5.5",
+    "@babel/runtime-corejs2": "7.5.5",
+    "async": "3.1.0",
     "babel-loader": "8.0.6",
-    "base64-inline-loader": "^1.1.1",
+    "base64-inline-loader": "1.1.1",
     "chalk": "2.4.2",
-    "commander": "2.16.0",
-    "connect": "3.6.6",
-    "core-js": "3.1.3",
-    "css-loader": "2.1.1",
+    "commander": "3.0.0",
+    "connect": "3.7.0",
+    "core-js": "3.2.1",
+    "css-loader": "3.2.0",
     "expose-loader": "0.7.5",
     "extra-watch-webpack-plugin": "1.0.3",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "fs-extra": "8.0.1",
+    "fs-extra": "8.1.0",
     "json-loader": "0.5.7",
     "jsonschema": "1.2.4",
-    "jszip": "3.2.1",
+    "jszip": "3.2.2",
     "less": "3.9.0",
     "less-loader": "5.0.0",
-    "lodash": "4.17.11",
-    "mini-css-extract-plugin": "0.6.0",
+    "lodash.clonedeep": "4.5.0",
+    "lodash.defaults": "4.2.0",
+    "lodash.difference": "4.5.0",
+    "lodash.findindex": "4.6.0",
+    "lodash.isequal": "4.5.0",
+    "lodash.template": "4.5.0",
+    "mini-css-extract-plugin": "0.8.0",
     "multi-loader": "0.1.0",
-    "powerbi-visuals-webpack-plugin": "2.1.2",
+    "powerbi-visuals-webpack-plugin": "2.1.4",
     "request": "2.88.0",
     "script-loader": "0.7.2",
     "serve-static": "1.14.1",
     "source-map-concat": "1.0.1",
-    "style-loader": "0.23.1",
-    "ts-loader": "6.0.1",
-    "tsc-watch": "2.2.1",
-    "typescript": "3.0.1",
-    "uglify-js": "3.4.6",
-    "uglifyjs-webpack-plugin": "1.2.7",
+    "style-loader": "1.0.0",
+    "ts-loader": "6.0.4",
+    "tsc-watch": "2.4.0",
+    "typescript": "3.5.3",
+    "uglify-js": "3.6.0",
+    "uglifyjs-webpack-plugin": "2.2.0",
     "uuid": "3.3.2",
-    "webpack": "4.32.2",
-    "webpack-bundle-analyzer": "3.3.2",
-    "webpack-dev-server": "3.4.1"
+    "webpack": "4.39.2",
+    "webpack-bundle-analyzer": "3.4.1",
+    "webpack-dev-server": "3.8.0"
   },
   "devDependencies": {
-    "acorn": "^6.1.1",
-    "eslint": "5.16.0",
+    "acorn": "7.0.0",
+    "eslint": "6.1.0",
     "har-validator": "5.1.3",
-    "jasmine": "2.8.0",
-    "jasmine-spec-reporter": "2.5.0",
-    "semver": "^5.6.0",
-    "tree-kill": "1.2.0"
+    "jasmine": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "semver": "6.3.0",
+    "tree-kill": "1.2.1"
   },
   "engines": {
     "node": "^10.0.0"
