Increase version. Update templates. Add tslint configuration.

--- a/templates/visuals/default/package.json
+++ b/templates/visuals/default/package.json
@@ -4,19 +4,21 @@
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\""
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
-    "@babel/runtime-corejs2": "^7.5.5",
+    "@babel/runtime": "7.6.0",
+    "@babel/runtime-corejs2": "7.6.0",
     "@types/d3": "5.7.2",
-    "d3": "5.10.0",
-    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
+    "d3": "5.12.0",
+    "powerbi-visuals-utils-dataviewutils": "2.2.1",
     "powerbi-visuals-api": "~2.6.1",
     "core-js": "3.2.1"
   },
   "devDependencies": {
-    "ts-loader": "6.0.4",
-    "typescript": "3.5.3"
+    "ts-loader": "6.1.0",
+    "tslint": "^5.18.0",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "3.6.3"
   }
 }
