--- a/templates/visuals/rvisual/package.json
+++ b/templates/visuals/rvisual/package.json
@@ -1,7 +1,18 @@
 {
   "name": "visual",
+  "dependencies": {
+    "powerbi-visuals-utils-dataviewutils": "^2.2.1"
+  },
   "devDependencies": {
-    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
-    "powerbi-visuals-api": "~2.6.1"
+    "powerbi-visuals-api": "~2.6.1",
+    "tslint": "^5.18.0",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "3.6.3"
+  },
+  "scripts": {
+    "pbiviz": "pbiviz",
+    "start": "pbiviz start",
+    "package": "pbiviz package",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   }
 }
