--- a/templates/visuals/table/package.json
+++ b/templates/visuals/table/package.json
@@ -4,20 +4,21 @@
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\""
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
+    "d3": "5.10.0",
+    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
+    "core-js": "3.2.1"
+  },
+  "devDependencies": {
+    "powerbi-visuals-api": "~2.6.1",
     "@babel/polyfill": "^7.4.4",
     "@babel/runtime": "^7.5.5",
     "@babel/runtime-corejs2": "^7.5.5",
     "@types/d3": "5.7.2",
-    "d3": "5.10.0",
-    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
-    "powerbi-visuals-api": "~2.6.1",
-    "core-js": "3.2.1"
-  },
-  "devDependencies": {
-    "ts-loader": "6.0.4",
-    "typescript": "3.5.3"
+    "tslint": "^5.18.0",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "3.6.3"
   }
 }
