--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.12",
+  "version": "3.1.13",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
     "start": "node ./bin/pbiviz.js",
-    "test": "npm run clean-tests && npm run eslint && npm run jasmine",
+    "test": "npm run clean-tests && npm run lint && npm run jasmine",
     "jasmine": "node spec/jasmine-runner.js",
     "jasmine-inspect": "node --inspect spec/jasmine-runner.js",
-    "eslint": "eslint bin lib spec",
+    "lint": "eslint bin lib spec",
     "clean-tests": "node spec/clean-tests.js",
-    "debug-tests": "npm run clean-tests && npm run eslint && npm run jasmine-inspect"
+    "debug-tests": "npm run clean-tests && npm run lint && npm run jasmine-inspect"
   },
   "bin": {
     "pbiviz": "./bin/pbiviz.js"
