--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.15",
+  "version": "3.1.16",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -50,23 +50,20 @@
     "less-loader": "5.0.0",
     "lodash.clonedeep": "4.5.0",
     "lodash.defaults": "4.2.0",
-    "lodash.difference": "4.5.0",
-    "lodash.findindex": "4.6.0",
     "lodash.isequal": "4.5.0",
-    "lodash.template": "4.5.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^1.4.0",
     "multi-loader": "0.1.0",
-    "powerbi-visuals-webpack-plugin": "^2.2.5",
+    "powerbi-visuals-webpack-plugin": "2.2.6",
     "request": "^2.88.2",
     "script-loader": "0.7.2",
     "serve-static": "1.14.1",
     "source-map-concat": "1.0.1",
-    "style-loader": "^1.1.3",
+    "style-loader": "^2.0.0",
     "ts-loader": "6.2.2",
     "tsc-watch": "4.2.3",
     "typescript": "3.8.3",
     "uuid": "7.0.2",
-    "webpack": "^4.42.1",
+    "webpack": "^5.28.0",
     "webpack-bundle-analyzer": "3.6.1",
     "webpack-dev-server": "^3.11.0"
   },
