--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.17",
+  "version": "3.1.18",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -39,38 +39,30 @@
     "connect": "3.7.0",
     "core-js": "3.6.4",
     "css-loader": "^3.4.2",
-    "expose-loader": "0.7.5",
     "extra-watch-webpack-plugin": "^1.0.3",
-    "friendly-errors-webpack-plugin": "1.7.0",
-    "fs-extra": "9.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "fs-extra": "^9.1.0",
     "json-loader": "0.5.7",
-    "jsonschema": "1.2.5",
     "jszip": "3.2.2",
     "less": "^3.11.1",
-    "less-loader": "5.0.0",
+    "less-loader": "^5.0.0",
     "lodash.clonedeep": "4.5.0",
     "lodash.defaults": "4.2.0",
     "lodash.isequal": "4.5.0",
     "mini-css-extract-plugin": "^1.4.0",
-    "multi-loader": "0.1.0",
     "powerbi-visuals-webpack-plugin": "2.2.6",
     "request": "^2.88.2",
-    "script-loader": "0.7.2",
     "serve-static": "1.14.1",
     "source-map-concat": "1.0.1",
-    "style-loader": "^2.0.0",
     "ts-loader": "6.2.2",
-    "tsc-watch": "4.2.3",
     "typescript": "3.8.3",
     "uuid": "7.0.2",
     "webpack": "^5.28.0",
     "webpack-bundle-analyzer": "3.6.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
-    "acorn": "7.1.1",
     "eslint": "6.8.0",
-    "har-validator": "5.1.3",
     "jasmine": "3.5.0",
     "jasmine-spec-reporter": "5.0.1",
     "semver": "7.1.3",
