--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.1.19",
+  "version": "3.2.0",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "node ./bin/pbiviz.js",
     "test": "npm run clean-tests && npm run lint && npm run jasmine",
     "jasmine": "node spec/jasmine-runner.js",
@@ -25,6 +26,9 @@
     "url": "https://github.com/Microsoft/PowerBI-visuals-tools/issues"
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-tools#readme",
+  "resolutions": {
+    "dns-packet": "5.2.4"
+  },
   "dependencies": {
     "@babel/core": "7.9.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
@@ -88,6 +92,7 @@
     "eslint": "6.8.0",
     "jasmine": "3.5.0",
     "jasmine-spec-reporter": "5.0.1",
+    "npm-force-resolutions": "0.0.10",
     "semver": "7.1.3",
     "tree-kill": "1.2.2"
   },
