--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
+    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions",
     "start": "node ./bin/pbiviz.js",
     "test": "npm run clean-tests && npm run lint && npm run jasmine",
     "jasmine": "node spec/jasmine-runner.js",
