--- a/templates/visuals/default/package.json
+++ b/templates/visuals/default/package.json
@@ -1,5 +1,11 @@
 {
   "name": "visual",
+  "description": "default_template_value",
+  "repository": {
+    "type": "default_template_value",
+    "url": "default_template_value"
+  },
+  "license": "MIT",
   "scripts": {
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
@@ -12,7 +18,7 @@
     "@types/d3": "5.7.2",
     "d3": "5.12.0",
     "powerbi-visuals-utils-dataviewutils": "2.2.1",
-    "powerbi-visuals-api": "~2.6.1",
+    "powerbi-visuals-api": "~3.8.2",
     "core-js": "3.2.1"
   },
   "devDependencies": {
