--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.4.1",
+  "version": "3.4.2",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -34,7 +34,7 @@
     "assert": "^2.0.0",
     "async": "3.2.0",
     "babel-loader": "^8.1.0",
-    "base64-inline-loader": "^1.1.1",
+    "base64-inline-loader": "^2.0.1",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "chalk": "3.0.0",
@@ -43,19 +43,18 @@
     "connect": "3.7.0",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
-    "core-js": "3.6.4",
+    "core-js": "^3.18.1",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^5.2.7",
     "domain-browser": "^4.22.0",
     "events": "^3.3.0",
     "extra-watch-webpack-plugin": "^1.0.3",
-    "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^9.1.0",
     "https-browserify": "^1.0.0",
     "json-loader": "0.5.7",
     "jszip": "^3.7.1",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0",
+    "less-loader": "^10.0.1",
     "lodash.clonedeep": "4.5.0",
     "lodash.defaults": "4.2.0",
     "lodash.isequal": "4.5.0",
@@ -67,9 +66,7 @@
     "punycode": "^2.1.1",
     "querystring-es3": "^0.2.1",
     "readable-stream": "^3.6.0",
-    "request": "^2.88.2",
     "serve-static": "1.14.1",
-    "source-map-concat": "1.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
