--- a/templates/visuals/default/package.json
+++ b/templates/visuals/default/package.json
@@ -19,7 +19,7 @@
     "d3": "5.12.0",
     "powerbi-visuals-utils-dataviewutils": "2.2.1",
     "powerbi-visuals-api": "~3.8.0",
-    "core-js": "3.2.1"
+    "core-js": "^3.18.1"
   },
   "devDependencies": {
     "ts-loader": "6.1.0",
