--- a/templates/visuals/table/package.json
+++ b/templates/visuals/table/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "d3": "5.10.0",
     "powerbi-visuals-utils-dataviewutils": "^2.2.1",
-    "core-js": "3.2.1"
+    "core-js": "^3.18.1"
   },
   "devDependencies": {
     "powerbi-visuals-api": "~3.8.0",
